--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -1,3 +1,4 @@
+{{see|CUT}}
 ==English==
 
 {{rank|real|eye|sun|496|cut|everything|six|comes}}
@@ -13,9 +14,9 @@
 
 # (''participial adjective'') Having been cut.
 # (''of a gem'') [[Carve]]d into a [[shape]]; not [[raw]].
+# {{colloquial}} [[Circumcised]].
 # {{Cricket}} (''of a shot'') Played with a [[horizontal]] [[bat]] to hit the ball backward of point.
 # {{bodybuilding}} Having muscular [[definition]] in which individual groups of [[muscle]] fibers stand out among larger muscles.
-# {{colloquial}} [[Circumcised]].
 
 ====Translations====
 {{trans-top|having been cut}}
