--- a/en/健/健.11125.wikitext
+++ b/en/健/健.11125.wikitext
@@ -13,14 +13,14 @@
 ----
 ==Japanese==
 ===Kanji===
-{{ja-kanji|grade=|rs=人09}}
-# {{defn|Japanese}} 
+{{ja-kanji|grade=4|rs=人09}}
+# {{defn|Japanese}}
 ====Readings====
 {{ja-readings|on=[[けん]] (ken)|kun=[[すこやか]] (sukoyaka), [[たけし]] (takeshi), [[したたか]] (shitataka)}}
 
 ====Compounds====
-*[[健康]]
-*[[健全]]
+* [[健康]]
+* [[健全]]
 ----
 ==Korean==
 ===Hanja===
@@ -33,27 +33,27 @@
 # {{defn|Mandarin}}
 
 ====Compounds====
-*[[健步]]
-*[[健存]]
-*[[健儿]]
-*[[健将]]
-*[[健捷]]
-*[[健康]]
-*[[健朗]]
-*[[健美]]
-*[[健美操]]
-*[[健美裤]]
-*[[健美运动]]
-*[[健全]]
-*[[健身]]
-*[[健身房]]
-*[[健实]]
-*[[健谈]]
-*[[健忘]]
-*[[健旺]]
-*[[健胃]]
-*[[健在]]
-*[[健壮]]
+* [[健步]]
+* [[健存]]
+* [[健儿]]
+* [[健将]]
+* [[健捷]]
+* [[健康]]
+* [[健朗]]
+* [[健美]]
+* [[健美操]]
+* [[健美裤]]
+* [[健美运动]]
+* [[健全]]
+* [[健身]]
+* [[健身房]]
+* [[健实]]
+* [[健谈]]
+* [[健忘]]
+* [[健旺]]
+* [[健胃]]
+* [[健在]]
+* [[健壮]]
 
 [[fr:健]]
 [[ko:健]]
