--- a/en/型/型.13070.wikitext
+++ b/en/型/型.13070.wikitext
@@ -14,7 +14,7 @@
 ----
 ==Japanese==
 ===Kanji===
-{{ja-kanji|grade=|rs=土06}}
+{{ja-kanji|grade=4|rs=土06}}
 # {{defn|Japanese}} 
 ====Readings====
 {{ja-readings|on=[[けい]] (kei)|kun=[[かた]] (kata)}}
