--- a/en/昨/昨.16976.wikitext
+++ b/en/昨/昨.16976.wikitext
@@ -15,7 +15,7 @@
 ----
 ==Japanese==
 ===Kanji===
-{{ja-kanji|grade=|rs=日05}}
+{{ja-kanji|grade=4|rs=日05}}
 # {{defn|Japanese}} 
 ====Readings====
 {{ja-readings|on=[[さく]] (saku)|kun=[[きのう]] (kinou)}}
