--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -14,7 +14,7 @@
 # Country in Central Europe. Official name: Federal Republic of Germany (Bundesrepublik Deutschland).
 
 ====Translations====
-{{top}}
+{{trans-top|Germany}}
 *Afrikaans: [[Duitsland]]
 *Arabic: {{ARchar|[[المانيا]]}} (Almánya) {{f}}
 *Armenian: [[Գերմանիա]] (Germania)
@@ -43,7 +43,7 @@
 *Irish: [[An Ghearmáin]] {{f}}
 *Italian: [[Germania]] {{f}}
 *Japanese: [[ドイツ]], [[独逸]] (Dóitsu)
-{{mid}}
+{{trans-mid}}
 *Khmer: {{KMchar|[[ឤលឺម៉ង់]]}} (āllīmang)
 *Korean: [[독일]] (dogil)
 *Latin: [[Germania]] {{f}}
@@ -77,7 +77,7 @@
 *Welsh: [[Yr Almaen]] {{f}}
 *Xhosa: [[iJamani]] ''(noun 5)''
 *Yiddish: [[Daytshland]] 
-{{bottom}}
+{{trans-bottom}}
 
 ===See also===
 *[[German]]
