--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -8,88 +8,6 @@ Old English ''[[sūcan]]''
 
 *:Rhymes: [[Rhymes:English:-ʌk|-ʌk]]
 
-===Verb===
-{{en-verb}}
-
-# To use the [[mouth]] to pull in [[liquid]] substances for ingestion or to perform a similar act on solid material without [[ingestion]].
-# To draw into, by any means, with an attractive force, usually without direct contact
-# (''colloquial'') Term of general disparagement, indicating the subject or situation has no redeeming qualities.  With ''at'', indicates a particular area of deficiency.''You're great at baseball, but you suck at golf.''
-# To perform [[fellatio]]; with "off" means to perform fellatio culminating in ejaculation.
-
-====Synonyms====
-*(3, 4 above) To [[blow]]
-
-====Antonyms====
-*(1, 2 above) To [[blow]]
-*(3 above) To [[rock]], to [[rule]]
-
-====Translations====
-{{trans-top|To use the mouth to pull in liquid substances for ingestion or to perform a similar act on solid material without ingestion}}
-*Arabic: {{ARchar|[[مص]]}}
-*Armenian: [[ծծել]] (tstsel)
-*Bulgarian: [[смуча]] (smuča)
-*Finnish: [[imeä]]
-*French: [[sucer]]
-*Hindi: [[चूसना]] (ćūsnā)
-*German: [[saugen]]
-*Korean: [[빨다]] (ppalda)
-*[[Kurdish]]: [[mêjîn]], [[mêtin]]
-*Italian: [[succhiare]], [[suggere]]
-{{trans-mid}}
-*Norwegian: [[suge]]
-*Portuguese: [[chupar]], [[sugar]]
-*Polish: [[ssać]]
-*Russian: [[сосать]] (sosát’), [[всасывать]] (vsásyvat’)
-*Slovak: [[cmúľať]]
-*Spanish: [[chupar]]
-*Swedish: [[suga]]
-*Telugu: [[చీకు]] (cheeku)
-{{trans-bottom}}
-
-{{trans-top|colloquial: term of general disparagement}}
-*Bulgarian: [[духам]] (dukham)
-*Finnish: [[imeä]], [[haista]]
-*French: [[être]] [[chiant]]
-*Hindi: (laayak)
-*Italian: [[fare schifo]]
-{{trans-mid}}
-*Norwegian: [[suge]]
-*Portuguese: [[saco]] ''(vulgar)''
-*Russian: [[сосать]] (sosát’) ''(vulgar)'', [[отстой]] (otstój) ''(noun)''
-*Swedish: [[suga]]
-{{trans-bottom}}
-
-{{trans-top|colloquial: with at, indicates a particular area of deficiency}}
-*Bulgarian: [[духам]] (dukham)
-*French: [[être]] [[chiant]] [[en]]
-*Hindi: (bakwaas)
-{{trans-mid}}
-*Italian: [[fare schifo a]]
-*Norwegian: [[suge]]
-*Swedish: [[suga]]
-{{trans-bottom}}
-
-=====Translations to be checked=====
-{{checktrans}}
-*{{ttbc|Slovak}}: (to ''suck'' a sweet) [[cmúľať]], (to ''suck in'' one’s breath) [[vtiahnuť]]
-
 ===Noun===
-'''suck'''
 
-# a [[sycophant]]
-
-====Quotations====
-#:*'''1916''': "You are McGlade's '''suck'''." - [[w:James Joyce|James Joyce]], ''[[w:Portrait of the Artist as a Young Man|Portrait of the Artist as a Young Man]] (Macmillan Press Ltd, paperback, 23)
-
-[[es:suck]]
-[[fa:suck]]
-[[fr:suck]]
-[[io:suck]]
-[[it:suck]]
-[[hu:suck]]
-[[fi:suck]]
-[[ta:suck]]
-[[vi:suck]]
-[[tr:suck]]
-[[uk:suck]]
-[[zh:suck]]
+1.) Wikipedia
