added grade parameter  ([[Project:AWB|AWB]]) <旧#2254552>

--- a/en/旧/旧.16911.wikitext
+++ b/en/旧/旧.16911.wikitext
@@ -17,7 +17,7 @@
 ----
 ==Japanese==
 ===Kanji===
-{{ja-kanji|grade=|rs=日01}}
+{{ja-kanji|grade=5|rs=日01}}
 # {{defn|Japanese}} 
 ====Readings====
 {{ja-readings|on=[[きゅう]] (kyū), [[ぐ]] (gu)|kun=[[ふるい]] (furui), [[もと]] (moto)}}
