--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -22,11 +22,15 @@ Originally from Hebrew ('''ישראל'''), the name "Israel" is rooted in the [[
 
 ===Translations===
 {{top}}
+*Albanian: [[Izraeli]]
 *Arabic: {{ARchar|[[إسرائيل]]}} (’isra’íl)
-*Bosnian: Izrael {{m}}
+*Belarusian: [[Ізраіль]] {{m}}
+*Bosnian: [[Izrael]] {{m}}
 *Breton: Israel
+*Bulgarian: [[Израел]] {{m}}
 *Catalan: Israel {{m}}
 *Chinese: [[以色列]] (Yǐsèliè)
+*Croatian: [[Izrael]] {{m}}
 *Czech: [[Izrael]]
 *Danish: Israel
 *Dutch: [[Israël]]
@@ -37,23 +41,33 @@ Originally from Hebrew ('''ישראל'''), the name "Israel" is rooted in the [[
 *German: Israel
 *Greek: [[Ισραήλ]] (israíl) {{n}}
 *Hebrew: [[ישראל|יִשְׂרָאֵל]] (Yiśra'ēl)
-{{mid}}
 *Hungarian: [[Izrael]]
 *Icelandic: [[Ísrael]]
 *Indonesian: Israel
 *Interlingua: Israel
 *Italian: [[Israele]]
+{{mid}}
 *Japanese: [[イスラエル]] (isuraeru)
+*Macedonian: [[Израел]] {{m}}
+*Marathi: [[इस्रायल]] (isrāyal)
 *Norwegian: [[#Norwegian|Israel]]
+*[[Old Slavonic]]: [[Їздраил҄ь]]
+*Persian: {{FAchar|[[اسرائیل]]}}
 *Polish: [[Izrael]]
 *Portuguese: Israel
+*Pushto: {{PSchar|[[اسرايل]]}}
 *Romanian: Israel {{n}}
 *Russian: [[Израиль]] (Izráil’)
+*Serbian:
+*:Cyrillic: [[Израел]] {{m}}
+*:Roman: [[Izrael]] {{m}}
 *Slovene: [[Izrael]] {{m}}
 *Spanish: Israel
 *Swedish: Israel
 *Tatar: [[İsrael#Tatar|İsrael]]
 *Turkish: [[İsrail]]
+*Ukrainian: [[Ізраїль]]
+*Urdu: {{URchar|[[اسرائیل]]}}
 {{bottom}}
 
 ===Related terms===
