--- a/en/倭/倭.11052.wikitext
+++ b/en/倭/倭.11052.wikitext
@@ -32,6 +32,7 @@
 
 ----
 ==Mandarin==
+===Adjective===
 {{cmn-adj|ts|pin=wēi|pint=wei1|rs=人08}}
 
 # (''archaic'') obedient
@@ -41,6 +42,7 @@
 
 # (''archaic'') describes a hairstyle for women that was popular during the [[w:Han Dynasty|Han Dynasty]] in which the hair was gathered up in a lopsided bun.
 
+===Noun===
 {{cmn-noun|ts|pin=wō|pint=wo1|rs=人08}}
 
 # (''archaic'') Japanese people; Japan
