--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -101,6 +101,7 @@ Old English ''[[specan|spēcan]]'', from earlier ''[[sprecan|sprēcan]]''
 
 # [[language]], [[jargon]], or [[terminology]] used uniquely in a particular environment or group.
 #: ''Corporate speak; IT speak''
+Zulu: ukukhuluma
 
 ===Anagrams===
 *[[spake]]
