added grade parameter  ([[Project:AWB|AWB]]) <垂#2263683>

--- a/en/垂/垂.13061.wikitext
+++ b/en/垂/垂.13061.wikitext
@@ -15,7 +15,7 @@
 ----
 ==Japanese==
 ===Kanji===
-{{ja-kanji|grade=|rs=土05}}
+{{ja-kanji|grade=6|rs=土05}}
 # {{defn|Japanese}} 
 ====Readings====
 {{ja-readings|on=[[すい]] (sui)|kun=[[たれる]] (tareru), [[たらす]] (tarasu), [[なんなんとす]] (nannantosu)}}
