/* Translations */ +Czech <port#2264847>

--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -27,6 +27,7 @@ Old English [[port#Old English|port]], from Latin [[portus]] ‘port, harbor’.
 =====Translations=====
 {{trans-top|a dock or harbour}}
 *Chinese: [[港口]] (gǎngkǒu)
+*Czech: [[přístav]] {{m}}
 *Dutch: [[haven#Dutch|haven]] {{f}}
 *Estonian: [[sadam]]
 *Finnish: [[satama]]
