--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -1,3 +1,4 @@
+{{wikipediapar|branch (disambiguation)}}
 [[Image:Acacia constricta branch.jpg|thumb|right|Tree branches.]]
 ==English==
 
@@ -8,9 +9,12 @@
 *{{audio|en-us-branch.ogg|Audio (US)}}
 *:Rhymes: [[Rhymes:English:-ɑːntʃ|-ɑːntʃ]]
 
+===Etymology===
+From {{OF.}} ''[[branche]]''.
+
 ===Noun===
 {{en-noun|es}}
-
+{{wikipedia}}
 # The [[woody]] part of a [[tree]] arising from the [[trunk]] and usually [[dividing]]
 # Something that [[divide]]s like the branch of a tree
 # A [[location]] of an [[organization]] with several locations.
