--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -33,7 +33,7 @@ Anglo Saxon ''felt''; akin to Dutch ''[[vilt]]'', German ''[[filz]]'', and possi
 {{mid}}
 *Russian: [[фетр]] {{m}}
 *Spanish: [[fieltro]] {{m}}
-*Swedish: [[filt]] {{c}
+*Swedish: [[filt]] {{c}}
 {{bottom}}
 
 =====Related terms=====
