--- a/en/垣/垣.13095.wikitext
+++ b/en/垣/垣.13095.wikitext
@@ -12,7 +12,7 @@
 ----
 ==Japanese==
 ===Kanji===
-{{ja-kanji|grade=|rs=土06}}
+{{ja-kanji|grade=c|rs=土06}}
 # {{defn|Japanese}} 
 ====Readings====
 {{ja-readings|on=[[えん]] (en)|kun=[[かき]] (kaki)}}
