--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -26,7 +26,7 @@
 {{mid}}
 *Russian: [[блондин]] (blondín) {{m}}, [[блондинка]] (blondínka) {{f}}
 *[[Scottish Gaelic]]: [[bàn]], [[fionn]] (of both males and females), [[fear#Scottish Gaelic|fear]] bàn {{m}}, [[bean#Scottish Gaelic|bean]] bhàn {{f}}
-*[[Spanish]]: [[rubio]] {{m}}, [[catire]] {{m}} (''Venezuela''), [[güero]] {{m}} (''Mexico''), [[mono]] {{m}} (''Colombia'') , [[gringo]] (''Peru''). For female : ''rubia, catira, güera, mona, gringa''.
+*[[Spanish]]: [[rubio]] {{m}}, [[catire]] {{m}} (''Venezuela''), [[güero]] {{m}} (''Mexico''), [[mono]] {{m}} (''Colombia'') , [[gringo]] {{m}} (''Peru''), [[chele]] {{m}} (''Nicaragua''). For female : ''rubia, catira, güera, mona, gringa, chela''.
 *Swedish: [[blondin]]
 *[[Welsh]]: [[penfelyn]]
 {{bottom}}
