-{{top}} +{{trans-top|buoyant device used to support something in liquid}}, -{{top}} +{{trans-top|sort of trowel}}, -{{top}} +{{trans-top|trailer in parade}}, -{{top}} +{{trans-top|funds committed to be paid but not yet paid}}, -{{top}} +{{trans-top| <float#2281185>

--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -31,55 +31,48 @@ From {{ON.}} [[fljóta]].
 # A [[soft]] beverage with a [[scoop]] of vanilla [[ice-cream]] floating in it.
 #:''It's true - I don't consider anything other than root-beer with vanilla ice-cream to be a "real" '''float'''.''
 # A small sum of money put in a [[cashier]]'s [[till]] at the start of business to enable [[change]] to be made.
+
 ====Translations====
-'''buoyant device used to support something in liquid'''
-{{top}}
+{{trans-top|buoyant device used to support something in liquid}}
 *Dutch: [[vlot]] {{n}}
 *Finnish: [[koho]]
-{{mid}}
+{{trans-mid}}
 *Japanese: [[浮き]] (uki), [[浮揚物]] (fuyoubutsu)
 *Lithuanian: [[plaustas]] {{m}} ''raft'', [[plūdė]] {{f}} ''of an angle or a net''
 *Russian: [[плот]] (plot) {{m}} ''raft'', [[поплавок]] (poplavók) {{m}} ''of an angle or a net''
-{{bottom}}
+{{trans-bottom}}
 
-'''sort of trowel'''
-{{top}}
-{{mid}}
+{{trans-top|sort of trowel}}
+{{trans-mid}}
 *Russian: [[мастерок]] (mast'erók) {{m}}, [[гладилка]] (gladílka) {{f}}, [[правило]] (pravílo) {{m}}
-{{bottom}}
+{{trans-bottom}}
 
-'''trailer in parade'''
-{{top}}
-{{mid}}
+{{trans-top|trailer in parade}}
+{{trans-mid}}
 *Russian: [[платформа]] (platfórma) {{f}}
-{{bottom}}
+{{trans-bottom}}
 
-'''funds committed to be paid but not yet paid'''
-{{top}}
-{{mid}}
-{{bottom}}
+{{trans-top|funds committed to be paid but not yet paid}}
+{{trans-mid}}
+{{trans-bottom}}
 
-'''banking: total amount of checks/cheques or other drafts written against a bank'''
-{{top}}
-{{mid}}
-{{bottom}}
+{{trans-top|banking: total amount of checks/cheques or other drafts written against a bank}}
+{{trans-mid}}
+{{trans-bottom}}
 
-'''insurance: premiums taken in but not yet paid out'''
-{{top}}
-{{mid}}
-{{bottom}}
+{{trans-top|insurance: premiums taken in but not yet paid out}}
+{{trans-mid}}
+{{trans-bottom}}
 
-'''programming: short form of floating-point number'''
-{{top}}
+{{trans-top|programming: short form of floating-point number}}
 *Dutch: [[vlottende kommagetal]] {{n}}
 *Finnish: [[liukuluku]]
-{{mid}}
-{{bottom}}
+{{trans-mid}}
+{{trans-bottom}}
 
-'''soft beverage with a scoop of vanilla ice-cream floating in it'''
-{{top}}
-{{mid}}
-{{bottom}}
+{{trans-top|soft beverage with a scoop of vanilla ice-cream floating in it}}
+{{trans-mid}}
+{{trans-bottom}}
 
 ====Synonyms====
 Shares offered to the public:
@@ -101,79 +94,72 @@ Shares offered to the public:
 # To move in a fluid manner.
 #:''The dancer '''floated''' gracefully around the stage.''
 # To automatically adjust a parameter as related parameters change.
-#(''[[finance]]'') To allow a price to be determined by the markets as opposed to by rule.
+# (''[[finance]]'') To allow a price to be determined by the markets as opposed to by rule.
 #:''The yen '''floats''' against the dollar.''
 
 ====Translations====
-'''be supported by a liquid'''
-{{top}}
+{{trans-top|be supported by a liquid}}
 *Dutch: [[drijven]]
 *Finnish: [[kellua]]
 *French: [[flotter]]
-{{mid}}
+{{trans-mid}}
 *Italian: [[galleggiare]]
 *Japanese: [[浮かぶ]] (ukabu), [[浮く]] (uku), [[漂う]] (tadayou)
 *Lithuanian: [[plūduriuoti]] {{impf}}; [[plaukti]] {{impf}}
 *Russian: [[плавать]] (plávat') {{impf}}; [[всплывать]] (vsplyvát') {{pf}}, [[всплыть]] (vsplyt') {{impf}} ''to reach the surface''
-*Spanish: [[flotar]] 
-{{bottom}}
+*Spanish: [[flotar]]
+{{trans-bottom}}
 
-'''be capable of floating'''
-{{top}}
+{{trans-top|be capable of floating}}
 *Dutch: [[drijven]]
 *Finnish: [[kellua]], [[pysyä]] [[pinta|pinnalla]]
-{{mid}}
+{{trans-mid}}
 *French: [[flotter]]
 *Japanese: [[浮かぶ]] (ukabu), [[浮く]] (uku)
 *Lithuanian: [[plūduriuoti]] {{impf}}; [[plaukti]] {{impf}}
 *Russian: [[держаться на воде]] (d'eržát's'a na vod'é)
-*Spanish: [[flotar]] 
-{{bottom}}
+*Spanish: [[flotar]]
+{{trans-bottom}}
 
-'''drift gently through the air'''
-{{top}}
+{{trans-top|drift gently through the air}}
 *Finnish: [[leijua]]
 *French: [[flotter]]
-{{mid}}
+{{trans-mid}}
 *Japanese: [[飛ぶ]] (tobu), [[浮遊する]] (fuyūsuru), [[浮く]] (uku)
 *Russian: [[парить]] (parít') {{impf}}, [[плыть]] (plyt') {{impf}}
-*Spanish: [[flotar]] 
-{{bottom}}
+*Spanish: [[flotar]]
+{{trans-bottom}}
 
-'''move in a particular direction with the liquid in which one is floating'''
-{{top}}
+{{trans-top|move in a particular direction with the liquid in which one is floating}}
 *Dutch: [[meedrijven]]
 *Finnish: [[lipua]]
 *French: [[flotter]]
-{{mid}}
+{{trans-mid}}
 *Lithuanian: [[plaukti]] {{impf}}
 *Russian: [[плыть]] (plyt') {{impf}}, [[дрейфовать]] (dr'ejfovát') {{impf}} ''of a ship''
-*Spanish: [[flotar]] 
-{{bottom}}
+*Spanish: [[flotar]]
+{{trans-bottom}}
 
-'''move in a fluid manner'''
-{{top}}
+{{trans-top|move in a fluid manner}}
 *Dutch: [[vloeien]]
-{{mid}}
+{{trans-mid}}
 *Finnish: [[lipua]], [[leijua]]
 *French: [[flotter]]
 *Lithuanian: [[tekėti]] {{impf}}
-*Spanish: [[flotar]] 
-{{bottom}}
+*Spanish: [[flotar]]
+{{trans-bottom}}
 
-'''automatically adjust a parameter as related parameters change'''
-{{top}}
+{{trans-top|automatically adjust a parameter as related parameters change}}
 *Dutch: [[vloeien]]
-{{mid}}
-{{bottom}}
+{{trans-mid}}
+{{trans-bottom}}
 
-'''allow a price to be determined by the markets as opposed to by rule'''
-{{top}}
+{{trans-top|allow a price to be determined by the markets as opposed to by rule}}
 *Finnish: [[kellua]]
 *French: [[flotter]]
-{{mid}}
+{{trans-mid}}
 *Japanese: [[超える]] (koeru)
-{{bottom}}
+{{trans-bottom}}
 
 ===Transitive verb===
 {{en-verb}}
@@ -189,18 +175,16 @@ Shares offered to the public:
 ====Translations====
 '''cause to be suspended'''
 
-'''propose for consideration'''
-{{top}}
+{{trans-top|propose for consideration}}
 *Dutch: [[te water laten]], [[voorstellen]]
 *Finnish: [[ehdottaa]], [[heittää]]
-{{mid}}
+{{trans-mid}}
 *Japanese: [[浮かぶ]] (ukabu)
-{{bottom}}
+{{trans-bottom}}
 
-'''extend a short-term loan to'''
-{{top}}
-{{mid}}
-{{bottom}}
+{{trans-top|extend a short-term loan to}}
+{{trans-mid}}
+{{trans-bottom}}
 
 =====Translations to be checked=====
 {{checktrans}}
