/* Translations - Korean */ <thunder#2281474>

--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -24,6 +24,7 @@
 *Finnish: [[ukkonen]]
 *German: [[Donner]] {{m}}
 *Japanese: [[雷]] ([[かみなり]], kaminarí)
+*Korean: [[우레]] (ure)
 *Polish: [[grzmot]] {{m}} 
 {{trans-mid}}
 *Portuguese: [[trovão]] {{m}}
@@ -71,7 +72,6 @@
 *{{ttbc|Japanese}}: [[雷]] ([[かみなり]], kaminarí), [[雷鳴]] ([[らいめい]], raimei)
 *{{ttbc|Kinyarwanda}}: [[inkuba]]
 *{{ttbc|Kurdish}}: [[birûsk]] {{f}}
-*{{ttbc|Korean}}: [[우뢰]] (uroe)
 *{{ttbc|Norwegian}}: [[torden]]
 *{{ttbc|Portuguese}}: [[trovão]] {{m}}
 *{{ttbc|Slovene}}: [[grom]] {{m}}
