--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -48,6 +48,7 @@ Originally from Hebrew ('''ישראל'''), the name "Israel" is rooted in the [[
 *Italian: [[Israele]]
 {{mid}}
 *Japanese: [[イスラエル]] (isuraeru)
+*Livonian: [[Izraēl]], [[Jūdõmō]]
 *Macedonian: [[Израел]] {{m}}
 *Marathi: [[इस्रायल]] (isrāyal)
 *Norwegian: [[#Norwegian|Israel]]
