robot  Adding: [[el:clung]] <clung#2282965>

--- a/en/c/clung.6836.wikitext
+++ b/en/c/clung.6836.wikitext
@@ -50,5 +50,6 @@
 ** [[ぶら下げられる]] ([[ぶらさげられる]], burasagerareru)
 ** [[ぶら下げられた]] ([[ぶらさげられた]], burasagerareta)
 
+[[el:clung]]
 [[fr:clung]]
 [[vi:clung]]
