--- a/en/既/既.16907.wikitext
+++ b/en/既/既.16907.wikitext
@@ -17,7 +17,7 @@
 ----
 ==Japanese==
 ===Kanji===
-{{ja-kanji|grade=|rs=无05}}
+{{ja-kanji|grade=c|rs=无05}}
 # {{defn|Japanese}} 
 ====Readings====
 {{ja-readings|on=[[き]] (ki)|kun=[[つきる]] (tsukiru), [[すでに]] (sudeni)}}
