--- a/en/偽/偽.11149.wikitext
+++ b/en/偽/偽.11149.wikitext
@@ -14,7 +14,7 @@
 ----
 ==Japanese==
 ===Kanji===
-{{ja-kanji|grade=|rs=人09}}
+{{ja-kanji|grade=c|rs=人09}}
 # {{defn|Japanese}}
 ====Readings====
 {{ja-readings|on=[[ぎ]] (gi), [[か]] (ka)|kun=[[いつわる]] (itsuwaru), [[にせ]] (nise), [[いつわり]] (itsuwari)}}
