--- a/en/傑/傑.11170.wikitext
+++ b/en/傑/傑.11170.wikitext
@@ -15,7 +15,7 @@
 ----
 ==Japanese==
 ===Kanji===
-{{ja-kanji|grade=|rs=人10}}
+{{ja-kanji|grade=c|rs=人10}}
 # {{defn|Japanese}} 
 ====Readings====
 {{ja-readings|on=[[けつ]] (ketsu)|kun=[[すぐれる]] (sugureru)}}
