--- a/en/慌/慌.15711.wikitext
+++ b/en/慌/慌.15711.wikitext
@@ -12,7 +12,7 @@
 ----
 ==Japanese==
 ===Kanji===
-{{ja-kanji|grade=|rs=心10}}
+{{ja-kanji|grade=c|rs=心10}}
 # {{defn|Japanese}} 
 ====Readings====
 {{ja-readings|on=[[こう]] (kō)|kun=[[あわてる]] (awateru), [[あわただし]] (awatadashi), [[くらい]] (kurai)}}
