added grade parameter  ([[Project:AWB|AWB]]) <旨#2283628>

--- a/en/旨/旨.16912.wikitext
+++ b/en/旨/旨.16912.wikitext
@@ -13,7 +13,7 @@
 ----
 ==Japanese==
 ===Kanji===
-{{ja-kanji|grade=|rs=日02}}
+{{ja-kanji|grade=c|rs=日02}}
 # {{defn|Japanese}} 
 ====Readings====
 {{ja-readings|on=[[し]] (shi)|kun=[[むね]] (mune), [[うまい]] (umai)}}
