--- a/en/慈/慈.15707.wikitext
+++ b/en/慈/慈.15707.wikitext
@@ -14,7 +14,7 @@
 ----
 ==Japanese==
 ===Kanji===
-{{ja-kanji|grade=|rs=心10}}
+{{ja-kanji|grade=c|rs=心10}}
 # {{defn|Japanese}} 
 ====Readings====
 {{ja-readings|on=[[じ]] (ji)|kun=[[いつくしむ]] (itsukushimu), [[いつくしみ]] (itsukushimi)}}
