--- a/en/愁/愁.15637.wikitext
+++ b/en/愁/愁.15637.wikitext
@@ -13,7 +13,7 @@
 ----
 ==Japanese==
 ===Kanji===
-{{ja-kanji|grade=|rs=心09}}
+{{ja-kanji|grade=c|rs=心09}}
 # {{defn|Japanese}} 
 ====Readings====
 {{ja-readings|on=[[しゅう]] (shū)|kun=[[うれい]] (urei), [[うれえる]] (ureeru)}}
