--- a/en/旬/旬.16916.wikitext
+++ b/en/旬/旬.16916.wikitext
@@ -13,7 +13,7 @@
 ----
 ==Japanese==
 ===Kanji===
-{{ja-kanji|grade=|rs=日02}}
+{{ja-kanji|grade=c|rs=日02}}
 # {{defn|Japanese}} 
 ====Readings====
 {{ja-readings|on=[[じゅん]] (jun), [[しゅん]] (shun)|kun=[[あまねく]] (amaneku)}}
