added grade parameter  ([[Project:AWB|AWB]]) <昇#2283777>

--- a/en/昇/昇.16943.wikitext
+++ b/en/昇/昇.16943.wikitext
@@ -17,7 +17,7 @@
 ==Japanese==
 
 ===Kanji===
-{{ja-kanji|grade=|rs=日04}}
+{{ja-kanji|grade=c|rs=日04}}
 # {{defn|Japanese}} 
 ====Readings====
 {{ja-readings|on=[[しょう]] (shō)|kun=[[のぼる]] (noboru)}}
