added grade parameter  ([[Project:AWB|AWB]]) <慎#2283840>

--- a/en/慎/慎.15713.wikitext
+++ b/en/慎/慎.15713.wikitext
@@ -14,7 +14,7 @@
 ----
 ==Japanese==
 ===Kanji===
-{{ja-kanji|grade=|rs=心10}}
+{{ja-kanji|grade=c|rs=心10}}
 # {{defn|Japanese}} 
 ====Readings====
 {{ja-readings|on=[[しん]] (shin)|kun=[[つつしむ]] (tsutsushimu), [[つつしみ]] (tsutsushimi)}}
