--- a/en/明/明.16950.wikitext
+++ b/en/明/明.16950.wikitext
@@ -26,7 +26,7 @@ From [[日]] ‘sun’ + [[月]] ‘moon’.
 # {{defn|Japanese}}
 
 ====Readings====
-{{ja-readings|on=[[めい]] (mei), [[みょう]] (myō)|kun=[[あかるい]] ([[明るい]], akarui), [[あきらか]] ([[明らか]], akiraka), [[あける]] ([[明ける]], akeru)}}
+{{ja-readings|kanon=[[めい]] (mei)|goon=[[みょう]] (myō)|kun=[[あかるい]] ([[明るい]], akarui), [[あきらか]] ([[明らか]], akiraka), [[あける]] ([[明ける]], akeru)}}
 
 ====Compounds====
 *[[明日]]
