--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -113,15 +113,15 @@ Old English ''[[pleġian]]''
 #:* '''play''' cards, '''play''' poker
 #:* '''play''' cat and mouse, '''play''' games
 #:* '''play''' house, '''play''' doctor
-# {{transitive}} {{en-ergative}}: To produce music on the indicated musical instrument.
+# {{transitive}} {{ergative}}: To produce music on the indicated musical instrument.
 #:* I'll '''play''' the piano and you sing.
 #:* Can you '''play''' an instrument?
-# {{transitive}} {{en-ergative}}: To produce music, the indicated song or style, with a musical instrument.
+# {{transitive}} {{ergative}}: To produce music, the indicated song or style, with a musical instrument.
 #:* We especially like to '''play''' jazz together.
 #:* '''Play''' a song for me.
 #:* Do you know how to '''play''' Für Elise?
 #:* My son thinks he can '''play''' music.
-# {{transitive}} {{en-ergative}}: To use a device to watch or listen to the indicated recording.
+# {{transitive}} {{ergative}}: To use a device to watch or listen to the indicated recording.
 #:* You can '''play''' the DVD now.
 
 ====Translations====
