--- a/en/e/European.2114.wikitext
+++ b/en/e/European.2114.wikitext
@@ -25,6 +25,7 @@
 {{mid}}
 *Italian: [[europeo]] ''m'', [[europea]] ''f''
 *Japanese: [[ヨーロッパ]]の (Yōroppa no), [[欧州]]の (Ōshū no)
+*Maltese: [[ewropew]] ''m'', [[ewropea]] ''f''
 *Polish: [[europejski]] ''m'', [[europejska]] ''f''
 *Portuguese: [[europeu]] ''m'', [[europeia]] ''f''
 *Spanish: [[europeo]]
