--- a/en/昆/昆.16942.wikitext
+++ b/en/昆/昆.16942.wikitext
@@ -13,7 +13,7 @@
 ----
 ==Japanese==
 ===Kanji===
-{{ja-kanji|grade=|rs=日04}}
+{{ja-kanji|grade=c|rs=日04}}
 # {{defn|Japanese}} 
 ====Readings====
 {{ja-readings|on=[[こん]] (kon)|kun=[[あに]] (ani)}}
