--- a/en/坪/坪.13037.wikitext
+++ b/en/坪/坪.13037.wikitext
@@ -13,7 +13,7 @@
 ----
 ==Japanese==
 ===Kanji===
-{{ja-kanji|grade=|rs=土05}}
+{{ja-kanji|grade=c|rs=土05}}
 # {{defn|Japanese}} 
 ====Readings====
 {{ja-readings|on=[[へい]] (hei), [[ひょう]] (hyō)|kun=[[つぼ]] (tsubo)}}
