--- a/en/偏/偏.11103.wikitext
+++ b/en/偏/偏.11103.wikitext
@@ -18,7 +18,7 @@
 
 
 ===Kanji===
-{{ja-kanji|grade=|rs=人09}}
+{{ja-kanji|grade=c|rs=人09}}
 ====Readings====
 {{ja-readings|on=[[へん]] ([[hen]])|kun=[[かたよる]] ([[偏る]], [[katayoru]]), [[ひとえに]] ([[偏に]], [[hitoeni]])}}
 ====Conjugation====
