--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -22,6 +22,7 @@ From {{F.}} ''[[beauté]]'', beauty, + Germanic ''[[-ful]]'', full of
 #:''Beautiful! I dropped the soup on the floor!''
 
 ====Synonyms====
+Megan Marks
 *(''possessing charm and attractive''): [[attractive]], [[cute]], [[fair]], [[good-looking]], [[gorgeous]], [[handsome]], [[hot]] (''slang''), [[lovely]], [[nice-looking]], [[pretty]], [[shapely]]
 *(''of the weather''): [[clear]], [[fine]], [[nice]], [[pleasant]], [[sunny]]
 *(''well executed''): [[excellent]], [[exceptional]], [[good]], [[great]], [[marvellous]]/[[marvelous]], [[perfect]], [[stylish]], [[wonderful]]
