--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -26,7 +26,7 @@
 *Russian: [[блондин]] (blondín) {{m}}, [[блондинка]] (blondínka) {{f}}
 *[[Scottish Gaelic]]: [[bàn]], [[fionn]] (of both males and females), [[fear#Scottish Gaelic|fear]] bàn {{m}}, [[bean#Scottish Gaelic|bean]] bhàn {{f}}
 {{mid}}
-*[[Spanish]]: [[rubio]] {{m}}, [[catire]] {{m}} (''Venezuela''), [[güero]] {{m}} (''Mexico''), [[mono]] {{m}} (''Colombia'') , [[gringo]] {{m}} (''Peru''), [[chele]] {{m}} (''El Salvador, Nicaragua''), [[canche]] {{m}} (''Guatemala''). 
+*[[Spanish]]: [[rubio]] {{m}}, [[güero]] {{m}} (''Mexico''), [[canche]] {{m}} (''Guatemala''), [[chele]] {{m}} (''El Salvador, Honduras, Nicaragua''), [[mono]] {{m}} (''Colombia'') , [[catire]] {{m}} (''Venezuela''), [[gringo]] {{m}} (''Peru''),  
 *Swedish: [[blondin]]
 *[[Welsh]]: [[penfelyn]]
 {{bottom}}
