--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -11,93 +11,87 @@ Old English ''{{Latinx|flǣsc}}'', ''[[flæsc]]''; cf. [[Old_High_German|Old Hig
 ===Noun===
 {{en-noun|-}}
 
-#the soft [[tissue]] of the [[body]], especially [[muscle]] and [[fat]].
-#[[animal]] tissue, especially animal tissue used as food.
-#the [[human]] body as a physical entity.
-#the skin of a human or animal.
-#the soft, often edible, parts of [[fruit]]s or [[vegetable]]s. 
-#a [[yellow]]ish [[pink]] [[colour]]; the colour of some human skin.
+# the soft [[tissue]] of the [[body]], especially [[muscle]] and [[fat]].
+# [[animal]] tissue, especially animal tissue used as food.
+# the [[human]] body as a physical entity.
+# the skin of a human or animal.
+# the soft, often edible, parts of [[fruit]]s or [[vegetable]]s.
+# a [[yellow]]ish [[pink]] [[colour]]; the colour of some human skin.
 #:<table><tr><td>flesh colour: &nbsp;</td><td bgcolor="#FFC090" width="80">&nbsp; </td></tr></table>
 
 ====Translations====
-'''body tissue'''
-{{top}}
-*Catalan: [[carn]] ''f''
+{{trans-top|body tissue}}
+*Catalan: [[carn]] {{f}}
 *Danish: [[kød]]
-*Dutch: [[vlees]] ''n''
+*Dutch: [[vlees]] {{n}}
 *Finnish: [[liha]]
 *French: [[chair]]
-*German: [[Fleisch]] ''n''
-*Greek: [[σάρκα]] [ˈsarka] ''f'', [[κρέας]] [ˈkre̞.as] ''n'' [rare (means also "meat")]
-{{mid}}
+*German: [[Fleisch]] {{n}}
+*Greek: [[σάρκα]] [ˈsarka] {{f}}, [[κρέας]] [ˈkre̞.as] {{n}} [rare (means also "meat")]
+{{trans-mid}}
 *Hungarian: [[hús]]
 *Ido: [[karno]]
 *Italian: [[carne]]
-*Russian: мягкая [[ткань]] ''f'', [[плоть]] ''f (poetic)'', [[мясо]] ''n coll.''
+*Russian: мягкая [[ткань]] {{f}}, [[плоть]] ''f (poetic)'', [[мясо]] ''n coll.''
 *[[Scottish Gaelic]]: [[feòil]] {{f}}
 *Telugu: [[మాంసం]] (maamsam)
-{{bottom}}
+{{trans-bottom}}
 
-'''animal tissue'''
-{{top}}
-*Catalan: [[carn]] ''f''
+{{trans-top|animal tissue}}
+*Catalan: [[carn]] {{f}}
 *Danish: [[kød]]
-*Dutch: [[vlees]] ''n''
+*Dutch: [[vlees]] {{n}}
 *Finnish: [[liha]]
-*German: [[Fleisch]] ''n''
-*Greek: [[σάρκα]] [ˈsarka] ''f'', [[κρέας]] [ˈkre̞.as] ''n'' (means also "meat")
-{{mid}}
+*German: [[Fleisch]] {{n}}
+*Greek: [[σάρκα]] [ˈsarka] {{f}}, [[κρέας]] [ˈkre̞.as] {{n}} (means also "meat")
+{{trans-mid}}
 *Hungarian: [[hús]]
-*Russian: [[мясо]] ''n'', [[плоть]] ''f''
+*Russian: [[мясо]] {{n}}, [[плоть]] {{f}}
 *[[Scottish Gaelic]]: [[feòil]] {{f}}
-{{bottom}}
+{{trans-bottom}}
 
-'''human body enity'''
-{{top}}
+{{trans-top|human body enity}}
 *Danish: [[krop]]
 *French: [[corps]]
-*German: [[Fleisch]] ''n''
-*Greek: [[σάρκα]] [ˈsarka] ''f''
-{{mid}}
+*German: [[Fleisch]] {{n}}
+*Greek: [[σάρκα]] [ˈsarka] {{f}}
+{{trans-mid}}
 *Ido: [[korpo]]
 *[[Scottish Gaelic]]: [[feòil]] {{f}}, [[craiceann]] {{m}}
-{{bottom}}
+{{trans-bottom}}
 
-'''skin'''
-{{top}}
+{{trans-top|skin}}
 *Danish: [[hud]]
-*Dutch: [[vel]] ''n''
-{{mid}}
+*Dutch: [[vel]] {{n}}
+{{trans-mid}}
 *[[Scottish Gaelic]]: [[craiceann]] {{m}}
-{{bottom}}
+{{trans-bottom}}
 
-'''edible part of fruit/vegetable'''
-{{top}}
+{{trans-top|edible part of fruit/vegetable}}
 *Danish: [[kød]], [[frugtkød]]
-*Dutch: [[vruchtvlees]] ''n''
+*Dutch: [[vruchtvlees]] {{n}}
 *Finnish: [[malto]], [[hedelmäliha]]
 *French: [[pulpe]]
-*German: [[Fleisch]] ''n'', [[Fruchtfleisch]] ''n''
-*Greek: [[σάρκα]] [ˈsarka] ''f''
-{{mid}}
+*German: [[Fleisch]] {{n}}, [[Fruchtfleisch]] {{n}}
+*Greek: [[σάρκα]] [ˈsarka] {{f}}
+{{trans-mid}}
 *Ido: [[pulpo]]
-*Russian: [[мякоть]] ''f''
+*Russian: [[мякоть]] {{f}}
 *[[Scottish Gaelic]]: [[feòil]] {{f}}
 *Telugu: [[గుజ్జు]] (gujju)
-{{bottom}}
+{{trans-bottom}}
 
-'''colour'''
-{{top}}
-*Catalan: [[carn]] ''f''
+{{trans-top|colour}}
+*Catalan: [[carn]] {{f}}
 *Danish: [[kødfarve]]
-*Dutch: [[mensenkleur]] ''f''
-*German: [[Fleischfarbe]] ''f''
-*Greek: [[σαρκόχρουν]] [sarˈko̞xrun] ''n'', [[σαρκόχρωμο]] [sarˈko̞xro̞ˌmo̞] ''n'', [[σαρκί]] [sarˈci] ''n'' (colloquial), [[κρεατί]] [ˌkre̞.a.ˈti] ''n'' (colloquial)
-{{mid}}
+*Dutch: [[mensenkleur]] {{f}}
+*German: [[Fleischfarbe]] {{f}}
+*Greek: [[σαρκόχρουν]] [sarˈko̞xrun] {{n}}, [[σαρκόχρωμο]] [sarˈko̞xro̞ˌmo̞] {{n}}, [[σαρκί]] [sarˈci] {{n}} (colloquial), [[κρεατί]] [ˌkre̞.a.ˈti] {{n}} (colloquial)
+{{trans-mid}}
 *Russian: [[телесный]] ''adj.''
-{{bottom}}
+{{trans-bottom}}
 
-=====Translations to be categorized=====
+=====Translations to be checked=====
 {{checktrans}}
 <!--Remove this section once all of the translations below have been moved into the tables above.-->
 *{{ttbc|German}}: [[Fleisch]] ''n'' (4 ''dated'')
@@ -106,17 +100,16 @@ Old English ''{{Latinx|flǣsc}}'', ''[[flæsc]]''; cf. [[Old_High_German|Old Hig
 ===Verb===
 '''flesh'''
 
-#to put flesh on; to fatten.
+# to put flesh on; to fatten.
 
 ====Translations====
-'''to put flesh on'''
-{{top}}
+{{trans-top|to put flesh on}}
 *Dutch: [[vervetten]]
 *Danish: [[opfede]]
-{{mid}}
+{{trans-mid}}
 *German: [[zunehmen]]
 *Persian: [[پرواربندی]] (parvaarbandi)
-{{bottom}}
+{{trans-bottom}}
 
 ===Derived terms===
 {{top3}}
