--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -41,6 +41,7 @@
 *[[Kazakh]]: [[асқазан]] (asqazan)
 *Korean: [[위]] (wi)
 *Latin: [[stomachus]] {{m}}
+*Maltese: [[stonku]] {{m}}
 *Old English: [[maga#Old English|maga]] {{m}}
 *Polish: [[żołądek]] {{m}}
 *Portuguese: [[estômago]] {{m}}
@@ -58,6 +59,7 @@
 *Hebrew: [[בטן]] {{f}}
 {{mid}}
 *Italian: [[pancia]] {{f}}
+*Maltese: [[żaqq]] {{f}}
 *Russian: [[живот]] (živót) {{m}}
 {{bottom}}
 
