--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -50,6 +50,7 @@ Originally from Hebrew ('''ישראל'''), the name "Israel" is rooted in the [[
 *Japanese: [[イスラエル]] (isuraeru)
 *Livonian: [[Izraēl]], [[Jūdõmō]]
 *Macedonian: [[Израел]] {{m}}
+*Maltese: [[Iżrael]]
 *Marathi: [[इस्रायल]] (isrāyal)
 *Norwegian: [[#Norwegian|Israel]]
 *[[Old Slavonic]]: [[Їздраил҄ь]]
