--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -41,6 +41,7 @@ From Dutch '''[[Nieuw-Zeeland]]''', "new Zeeland", after the Dutch settlement in
 *Japanese: [[ニュージーランド]], [[新西蘭]] (Nyū Jīrando)
 *Korean: [[뉴질랜드]] (nyujillaendeu)
 *Latin: [[Nova Zelanda]] {{f}}
+*Maltese: New Zealand
 *[[Maori]]: [[Aotearoa]], [[Niu Tireni]]
 *Norwegian: [[#Norwegian|New Zealand]], [[Ny-Zealand]]
 *Polish: [[Nowa Zelandia]] {{f}}
