robot  Adding: [[ja:substance]] <substance#2297659>

--- a/en/s/substance.7215.wikitext
+++ b/en/s/substance.7215.wikitext
@@ -140,6 +140,7 @@ From {{L.}} ''[[substantia]]'', '''substance''' or '''essence''', noun form from
 [[io:substance]]
 [[it:substance]]
 [[hu:substance]]
+[[ja:substance]]
 [[pt:substance]]
 [[ru:substance]]
 [[simple:substance]]
