Replacing page with '<b><font size=99><font color=green>Ely McLaughlin is what beautiful means:]' <beautiful#2299894>

--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -1,134 +1,1 @@
-==English==
-
-{{rank|England|sense|ten|422|beautiful|possible|mark|followed}}
-
-===Etymology===
-From {{F.}} ''[[beauté]]'', beauty, + Germanic ''[[-ful]]'', full of
-
-===Pronunciation===
-*{{AHD|byo͞oʹtĭ-fəl}}, {{IPA|/ˈbjuːtɪfəl/}}, {{SAMPA|/"bju:tIf@l/}}
-*{{audio|en-us-beautiful.ogg|Audio (US)}}
-
-===Adjective===
-{{en-adj}}
-
-# possessing charm and attractive
-# {{cattag|of the weather}} pleasant; clear.
-# well executed
-#:''The skater performed a beautiful [[axel]].''
-# <!--not an interjection-->(''as a [[pro-sentence]]'') How beautiful that is!
-#:''Beautiful! What a catch!'' (referring to an athlete catching a ball)
-# <!--not an interjection-->(''as a pro-sentence; ironic'') How unfortunate that is!
-#:''Beautiful! I dropped the soup on the floor!''
-
-====Synonyms====
-*(''possessing charm and attractive''): [[attractive]], [[cute]], [[fair]], [[good-looking]], [[gorgeous]], [[handsome]], [[hot]] (''slang''), [[lovely]], [[nice-looking]], [[pretty]], [[shapely]]
-*(''of the weather''): [[clear]], [[fine]], [[nice]], [[pleasant]], [[sunny]]
-*(''well executed''): [[excellent]], [[exceptional]], [[good]], [[great]], [[marvellous]]/[[marvelous]], [[perfect]], [[stylish]], [[wonderful]]
-*(''ironic: how unfortunate''): [[great]], [[marvellous]]/[[marvelous]], [[nice]], very nice, [[wonderful]] (''any of these can be prefixed with an [[intensifier]] such as'' [[bloody]], [[damned]] ''or'' [[just]])
-
-====Antonyms====
-*(''possessing charm and attractive''): [[grotesque]], [[hideous]], [[homely]], [[plain]], [[misshapen]], [[repulsive]], [[ugly]]
-*(''of the weather''): [[bad]], [[cloudy]], [[dull]], [[miserable]], [[overcast]], [[rainy]], [[wet]]
-*(''well executed''): [[average]], [[bad]], [[mediocre]], [[poor]], [[shoddy]], [[substandard]], [[terrible]], [[weak]]
-
-====Derived terms====
-*[[beautifully]]
-*[[beautifulness]]<!--?-->
-
-====Related terms====
-*[[beauty]]
-
-====Translations====
-{{trans-top|possessing charm and attractive}}
-*[[Afrikaans]]: [[mooi]]
-*Albanian: i bukur {{m}}, e bukur {{f}}
-*[[Anglo-Saxon]]: [[wlitig]]
-*Arabic: {{ARchar|[[جميل]]}} (jamil)
-*[[Breton]]: [[brav]], [[kaer]]
-*Bulgarian: [[красив]], [[прекрасен]]
-*Chinese: [[漂亮]] (piàoliàng, piao4liang4), [[美]] (měi, meili, mei3li4)
-*Danish: [[smuk]] ''en'', [[smukt]] ''et'', [[smukke]] {{p}}
-*Dutch: [[mooi]]
-*Esperanto: [[bela]]
-*Estonian: [[kaunis]] [[ilus]]
-*[[Faeroese]]: [[vakur]] {{m}}, [[vøkur]] {{f}} [[vakurt]] {{n}}
-*Fijian: [[totoka]]
-*Filipino: [[maganda]]
-*Finnish: [[kaunis]]
-*French: [[beau]] {{m}}, [[belle]] {{f}}
-*Frisian: [[moai]], [[kreas]]
-*German: [[schön]]
-*Greek, Modern: [[ωραίος]] {{m}} (oréyos), [[όμορφος]] {{m}} (ómorphos)
-*Hebrew: [[יפה]] (yafe) {{m}}, יפה (yafa) {{f}}
-*Hindi: [[ख़ूबसूरत]] (<u>kh</u>ūbsūrat), [[सुन्दर]] (sundar)
-*Icelandic: [[fallegur]], [[fagur]]
-{{trans-mid}}
-*Indonesian: [[indah]], [[cantik]], [[ayu]], [[molek]], [[cakep]]
-*Italian: [[bello]]
-*Japanese: [[美しい]] ([[うつくしい]], utsukushii), [[綺麗]] ([[きれい]], kirei), [[素敵]] ([[すてき]], suteki)
-*Latin: [[pulcher]], [[formosus]] {{m}}, [[bellus]] {{m}}
-*Old Norse: [[fagr]]
-*Persian: {{FAchar|[[زیبا]]}} (ziba)
-*Polish: [[piękny]]
-*Portuguese: [[belo]] {{m}}, [[bela]] {{f}}, [[bonito]] {{m}}, [[bonita]] {{f}}
-*Romanian: [[frumos]] {{m}}, [[frumoasa]] {{f}}
-*Russian: [[красивый]],[[прекрасный]]
-*[[Scottish Gaelic]]: [[àlainn]], [[bòidheach]], [[brèagha]], [[fèilleil]], [[grinn]], [[maiseach]], [[rìomhach]], [[sgèimheach]]
-*Spanish: [[hermoso]], [[bello]], [[lindo]]
-*Slovak: [[krásny]] {{m}}, krásna {{f}}, krásne {{n}}
-*Swedish: [[vacker]]
-*[[Tajik]]: {{FAchar|[[نیلوفار]]}} (nilufar)
-*[[Tamil]]: [[அழகிய]] [azhagiya]
-*[[Telugu]]: [[అందమైన]]
-*Turkish: [[güzel]]
-*Urdu: {{URchar|[[خوبصورت]]}} (<u>kh</u>ūbsūrat)
-*Vietnamese: [[đẹp]], [[đẹp đẽ]]
-{{trans-bottom}}
-
-{{trans-top|of weather: pleasant, clear}}
-*Dutch: [[mooi]]
-*French: [[beau]] {{m}}
-*Hebrew: [[נאה]] (na'e)
-{{trans-mid}}
-*Italian: [[bel]] (''before "tempo"''); [[bello]] (''after "tempo"'')
-*[[Tamil]]: [[அழகிய]] [azhagiya]
-*[[Telugu]]: [[ఆహ్లాదకరమైన]]
-{{trans-bottom}}
-
-{{trans-top|well executed}}
-{{trans-mid}}
-{{trans-bottom}}
-
-{{trans-top|ironic: how unfortunate}}
-{{trans-mid}}
-{{trans-bottom}}
-
-[[Category:1000 English basic words]]
-
-[[ang:beautiful]]
-[[ar:beautiful]]
-[[de:beautiful]]
-[[el:beautiful]]
-[[es:beautiful]]
-[[fa:beautiful]]
-[[fr:beautiful]]
-[[gl:beautiful]]
-[[ko:beautiful]]
-[[hy:beautiful]]
-[[io:beautiful]]
-[[it:beautiful]]
-[[kk:beautiful]]
-[[ku:beautiful]]
-[[hu:beautiful]]
-[[ja:beautiful]]
-[[pl:beautiful]]
-[[pt:beautiful]]
-[[qu:beautiful]]
-[[ru:beautiful]]
-[[simple:beautiful]]
-[[fi:beautiful]]
-[[ta:beautiful]]
-[[vi:beautiful]]
-[[uk:beautiful]]
-[[zh:beautiful]]
+<b><font size=99><font color=green>Ely McLaughlin is what beautiful means:]
