--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -1,1 +1,3 @@
-<b><font size=99><font color=green>Ely McLaughlin is what beautiful means:]
+<b><font size=99><font color=green>Ely McLaughlin </b>
+
+is what beautiful means:]
