--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -25,7 +25,7 @@
 *Russian: [[блондин]] (blondín) {{m}}, [[блондинка]] (blondínka) {{f}}
 *[[Scottish Gaelic]]: [[bàn]], [[fionn]] (of both males and females), [[fear#Scottish Gaelic|fear]] bàn {{m}}, [[bean#Scottish Gaelic|bean]] bhàn {{f}}
 {{trans-mid}}
-*Spanish: [[rubio]] {{m}}, [[güero]] {{m}} (''Mexico''), [[canche]] {{m}} (''Guatemala''), [[chele]] {{m}} (''El Salvador, Honduras, Nicaragua''), [[macho]] {{m}} (''Costa Rica''), [[fulo]] {{m}} (''Panama''), [[mono]] {{m}} (''Colombia''), [[catire]] {{m}} (''Venezuela''), [[gringo]] {{m}} (''Peru''). ''For female :'' [[rubia]], [[güera]], [[canche]] (''unchangeable''), [[chela]], [[macha]], [[fula]], [[mona]], [[catira]], [[gringa]].
+*Spanish: [[rubio]] {{m}}, [[güero]] {{m}} (''Mexico''), [[canche]] {{m}} (''Guatemala''), [[chele]] {{m}} (''El Salvador, Honduras, Nicaragua''), [[macho]] {{m}} (''Costa Rica''), [[fulo]] {{m}} (''Panama''), [[mono]] {{m}} (''Colombia''), [[catire]] {{m}} (''Venezuela''), [[gringo]] {{m}} (''Peru''), [[rucio]] {{m}} (''Chile''). ''For female :'' [[rubia]], [[güera]], [[canche]] (''unchangeable''), [[chela]], [[macha]], [[fula]], [[mona]], [[catira]], [[gringa]], [[rucia]].
 *Swedish: [[blondin]]
 *Welsh: [[penfelyn]]
 {{trans-bottom}}
