robot  Adding: [[tr:beautiful]] <beautiful#2303893>

--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -130,5 +130,6 @@ From {{F.}} ''[[beauté]]'', beauty, + Germanic ''[[-ful]]'', full of
 [[fi:beautiful]]
 [[ta:beautiful]]
 [[vi:beautiful]]
+[[tr:beautiful]]
 [[uk:beautiful]]
 [[zh:beautiful]]
