--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -1,3 +1,4 @@
+{{wikipedia}}
 ==English==
 
 {{rank|free|return|call|354|speak|land|why|women}}
@@ -8,7 +9,7 @@
 *:Rhymes: [[Rhymes:English:-iːk|-iːk]]
 
 ===Etymology===
-Old English ''[[specan|spēcan]]'', from earlier ''[[sprecan|sprēcan]]''
+{{OE.}} ''[[specan|spēcan]]'', from earlier ''[[sprecan|sprēcan]]''
 
 ===Verb===
 {{en-verb|speaks|speaking|'''[[spoke]]''' ''or archaic'', '''[[spake]]'''|spoken}}
