--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -33,6 +33,7 @@ From the Latin [[id est]], meaning “that is”.
 *Russian: [[т.е.]] ([[то есть]], ''tó jest’)
 *Spanish: [[es decir]]
 *Swedish: [[dvs]], [[d v s]], [[d.v.s.]] (''det vill säga'')
+*Turkish: [[yani]]
 {{bottom}}
 
 [[bg:i.e.]]
