--- a/en/p/pen.4773.wikitext
+++ b/en/p/pen.4773.wikitext
@@ -54,7 +54,7 @@
 *Portuguese: [[caneta]] {{f}}
 *Russian: [[ручка]] (rúčka) {{f}}
 *Scottish Gaelic: [[peann]] {{m}}
-*Spanish: [[pluma]] {{f}}, [[bolígrafo]] {{m}}, [[esfero]] {{m}} (''Colombia''), [[lapicero]] {{m}} (''Venezuela''), [[lapicera]] {{f}} or [[birome]] {{m}} (''Argentina'')
+*Spanish: [[pluma]] {{f}}, [[bolígrafo]] {{m}}, [[esfero]] {{m}} (''Colombia''), [[plumero]] {{m}} (''Colombian Atlantic Coast''), [[lapicero]] {{m}} (''Peru, Venezuela''), [[birome]] {{m}} (''Argentina - pronounced 'biróm' '')
 *Swedish: [[penna#Swedish|penna]]
 *[[Telugu]]: [[పెన్ను]], [[కలము]], [[కలం]] (pennu, kalamu, kalam)
 *Turkish: [[kalem]]
