--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -125,6 +125,7 @@ Old English ''[[findan]]'', from Germanic ''*finþanan''.  Cognate with Dutch ''
 
 [[Category:200 English basic words]]
 
+[[zh-min-nan:find]]
 [[et:find]]
 [[el:find]]
 [[es:find]]
