--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -51,6 +51,7 @@
 *Italian: [[diritto]], [[liscio]], [[subito]], [[eterosessuale]] (8)
 *Japanese: [[真直ぐな]] (まっすぐな, massuguna)
 *Korean: [[똑바른]] (ggokbareun)
+*Polish: [[prosty]] (1,3,6)
 *Portuguese: [[reto]] {{m}} (1), [[direto]] {{m}} (3), [[honesto]] {{m}} (3), [[direito]] {{m}} (4)
 *Russian: [[прямой]] (prjamój)
 *Spanish: [[derecho]]
