--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -24,6 +24,7 @@ Originally from Hebrew ('''ישראל'''), the name "Israel" is rooted in the [[
 {{top}}
 *Albanian: [[Izraeli]]
 *Arabic: {{ARchar|[[إسرائيل]]}} (’isra’íl)
+*Armenian: [[Իսրայել]]
 *Belarusian: [[Ізраіль]] {{m}}
 *Bosnian: [[Izrael]] {{m}}
 *Breton: Israel
