robot  Adding: [[pl:United States of America]] <United States of America#2329441>

--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -94,6 +94,7 @@
 [[mi:United States of America]]
 [[nl:United States of America]]
 [[ja:United States of America]]
+[[pl:United States of America]]
 [[pt:United States of America]]
 [[ro:United States of America]]
 [[ru:United States of America]]
