--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -12,7 +12,7 @@
 * [[strait]]
 
 ===Adjective===
-'''straight''' ({{compar}}: '''[[straighter]]''', {{superl}}: '''[[straightest]]''')
+{{en-adj}}
 
 # Not crooked or bent; having a constant direction throughout its length.
 #: ''a '''straight''' line''.
@@ -65,7 +65,7 @@
 {{trans-bottom}}
 
 {{trans-top|As it should be}}
-*Finnish: [[kunnossa]] [[oleva]], [[järjestyksessä]] [[oleva]]
+*Finnish: [[kunto|kunnossa]], [[järjestys|järjestyksessä]]
 {{trans-mid}}
 *Portuguese: [[direito]] {{m}}
 {{trans-bottom}}
@@ -78,8 +78,9 @@
 {{trans-bottom}}
 
 {{trans-top|Having all cylinders in a single row}}
-*Polish: [[prosty]]
+*Finnish: [[suora]]
 {{trans-mid}}
+*Polish: [[prosty]]
 *Swedish: [[rak]]
 {{trans-bottom}}
 
@@ -110,7 +111,6 @@
 {{top}}
 *{{ttbc|Arabic}}: {{ARchar|[[مستقيم]]}} {{Unicode|(mustaqí:m)}}
 *{{ttbc|Chinese}}: [[直]]的 (zhí de), [[笔直的]] (bǐzhí de)
-*{{ttbc|Finnish}}: [[suora]]
 *{{ttbc|Greek}}: [[ίσια]] (ísia)
 *{{ttbc|Italian}}: [[diritto]], [[liscio]], [[subito]]
 *{{ttbc|Japanese}}: [[真直ぐな]] (まっすぐな, massuguna)
