-{{top}} +{{trans-top|soft foodstuff made from milk}}, -{{top}} +{{trans-top|in chemistry}}, -{{top}} +{{trans-top|other foodstuffs like butter}}, -{{top}} +{{trans-top|to spread butter on}} <butter#2332447>

--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -1,6 +1,7 @@
 {{See|Butter}}
 [[Image:NCI butter.jpg|thumb|right|250 px|Butter (1) [[stick]] with a butter [[knife]].]]
 ==English==
+
 ===Pronunciation===
 *(''UK''): {{IPA|/ˈbʌt.ə/}}, {{SAMPA|/"bVt.@/}}
 *(''US''): {{AHD|bŭtʹər}}, {{IPA|/ˈbʌɾ.ɚ/}}, {{SAMPA|/"bV4.@`/}}
@@ -14,9 +15,9 @@ From a W.Germanic source (cf. Ger. Butter, Du. boter) < Latin ''[[butyrum]]'' < 
 {{wikipedia}}
 {{en-noun-reg-both|butter}}
 
-#{{uncountable}} A soft, fatty foodstuff made by [[churn]]ing the [[cream]] of [[milk]] (generally cow's milk).
-#{{countable}} {{obsolete}} {{chemistry}} Any specific [[soft]] [[substance]]
-#{{uncountable}} Any of various foodstuffs made from other foods or oils, similar in consistency to, eaten like or intended as a substitute for butter (''preceded by the name of the food used to make it'').
+# {{uncountable}} A soft, fatty foodstuff made by [[churn]]ing the [[cream]] of [[milk]] (generally cow's milk).
+# {{countable}} {{obsolete}} {{chemistry}} Any specific [[soft]] [[substance]]
+# {{uncountable}} Any of various foodstuffs made from other foods or oils, similar in consistency to, eaten like or intended as a substitute for butter (''preceded by the name of the food used to make it'').
 #:''peanut butter''
 
 ====Derived terms====
@@ -174,8 +175,7 @@ From a W.Germanic source (cf. Ger. Butter, Du. boter) < Latin ''[[butyrum]]'' < 
 *[[butter-ham]]<!--from Dutch-->
 
 ====Translations====
-'''soft foodstuff made from milk'''
-{{top}}
+{{trans-top|soft foodstuff made from milk}}
 *Arabic: {{ARchar|[[زبدة]]}} (zúbda) {{f}}
 *Bavarian: [[Budda]] {{m}}
 *Breton: [[amanenn]] {{m}}
@@ -196,7 +196,7 @@ From a W.Germanic source (cf. Ger. Butter, Du. boter) < Latin ''[[butyrum]]'' < 
 *Ido: [[butro]]
 *Interlingua: [[butyro]]
 *Italian: [[burro#Italian|burro]] {{m}}
-{{mid}}
+{{trans-mid}}
 *Japanese: [[バター]] (batā)
 *Kinyarwanda: [[amavuta]]
 *Korean: [[버터]] (beoteo)
@@ -217,22 +217,20 @@ From a W.Germanic source (cf. Ger. Butter, Du. boter) < Latin ''[[butyrum]]'' < 
 *Thai: {{THchar|[[เนย]]}} (noey)
 *Ukrainian: [[масло#Ukrainian|масло]] (máslo) {{n}}
 *Vietnamese: [[bơ]]
-{{bottom}}
+{{trans-bottom}}
 
-'''in chemistry'''
-{{top}}
-{{mid}}
-{{bottom}}
+{{trans-top|in chemistry}}
+{{trans-mid}}
+{{trans-bottom}}
 
-'''other foodstuffs like butter'''
-{{top}}
-{{mid}}
-{{bottom}}
+{{trans-top|other foodstuffs like butter}}
+{{trans-mid}}
+{{trans-bottom}}
 
 ===Verb===
 {{en-verb}}
 
-#{{transitive}} To [[spread]] butter on.
+# {{transitive}} To [[spread]] butter on.
 #:'''''Butter''' the toast.''
 
 ====Derived terms====
@@ -246,15 +244,14 @@ From a W.Germanic source (cf. Ger. Butter, Du. boter) < Latin ''[[butyrum]]'' < 
 *[[know which side one's bread is buttered]]
 
 ====Translations====
-'''to spread butter on'''
-{{top}}
+{{trans-top|to spread butter on}}
 *Czech: [[mazat]] [[máslo|máslem]] (''[[impf.]]''); [[namazat]] [[máslo|máslem]]; [[pomazat]] [[máslo|máslem]] (''[[pf.]]'')
 *Danish: [[smøre]] brødet
 *Dutch: [[beboteren]], [[inboteren]], met boter [[besmeren]]
 *French: [[beurrer]]
 *German: [[mit]] Butter [[bestreichen]]
 *[[Interlingua]]: [[butyrar]]
-{{mid}}
+{{trans-mid}}
 *Italian: [[imburrare]]
 *Polish: [[smarować]] [[masłem]]
 *Portuguese: [[amanteigar]]; [[passar]] [[manteiga]] [[em]]
@@ -263,7 +260,7 @@ From a W.Germanic source (cf. Ger. Butter, Du. boter) < Latin ''[[butyrum]]'' < 
 *Spanish: [[untar]] [[mantequilla]]
 *Thai: {{THchar|[[ทาเนย]]}} (ta noey)
 *Vietnamese: [[quẹt]] bơ (vào)
-{{bottom}}
+{{trans-bottom}}
 
 ===See also===
 *[[butyraceous]]
@@ -272,11 +269,12 @@ From a W.Germanic source (cf. Ger. Butter, Du. boter) < Latin ''[[butyrum]]'' < 
 ----
 
 ==Swedish==
+
 ===Adjective===
 {{sv-adj-reg|3=buttr}}
 '''butter'''
 
-#[[grumpy]]
+# [[grumpy]]
 
 [[Category:Swedish adjectives]]
 [[Category:1000 English basic words]]
