--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -46,6 +46,7 @@
 *Irish: [[díreach]]
 *Polish: [[prosty]]
 *Portuguese: [[reto]] {{m}}
+*Russian: [[прямой]] (pr'amój)
 *Swedish: [[rak]]
 {{trans-bottom}}
 
@@ -61,6 +62,7 @@
 {{trans-mid}}
 *Polish: [[prosty]]
 *Portuguese: [[direto]] {{m}}, [[honesto]] {{m}}
+*Russian: [[прямой]] (pr'amój)
 *Swedish: [[rak]]
 {{trans-bottom}}
 
@@ -68,6 +70,7 @@
 *Finnish: [[kunto|kunnossa]], [[järjestys|järjestyksessä]]
 {{trans-mid}}
 *Portuguese: [[direito]] {{m}}
+*Russian: [[правильный]] (právil'nyj), [[нормальный]] (normál'nyj)
 {{trans-bottom}}
 
 {{trans-top|Undiluted}}
@@ -75,6 +78,7 @@
 *Finnish: [[raaka]], [[laimentamaton]]
 {{trans-mid}}
 *French: [[pur]], [[pure]]
+*Russian: [[чистый]] (čístyj), [[неразбавленный]] (n'erazbávl'ennyj) 
 {{trans-bottom}}
 
 {{trans-top|Having all cylinders in a single row}}
@@ -116,7 +120,6 @@
 *{{ttbc|Japanese}}: [[真直ぐな]] (まっすぐな, massuguna)
 {{mid}}
 *{{ttbc|Korean}}: [[똑바른]] (ggokbareun)
-*{{ttbc|Russian}}: [[прямой]] (prjamój)
 *{{ttbc|Spanish}}: [[derecho]]
 *{{ttbc|Telugu}}: [[తిన్నని]] (tinnani), [[సరళమైన]] (saraLamaina), [[సూటి]] (sooTi)
 *{{ttbc|Welsh}}: [[uniawn]]
