--- a/en/意/意.15651.wikitext
+++ b/en/意/意.15651.wikitext
@@ -36,7 +36,6 @@
 # {{defn|Korean}}
 
 ====Compounds====
-{{top2}}
 *[[意氣]] ([[의기]], uigi)
 *[[意圖]] ([[의도]], uido)
 *[[意味]] ([[의미]], uimi)
@@ -44,15 +43,14 @@
 *[[意識]] ([[의식]], uisig, -sik)
 *[[意譯]] ([[의역]], uiyeog, -yeok)
 *[[意外]] ([[의외]], uioe)
-{{mid2}}
 *[[意欲]] ([[의욕]], uiyog, -yok)
 *[[意匠]] ([[의장]], uijang)
 *[[意中]] ([[의중]], uijung)
 *[[意志]] ([[의지]], uiji)
 *[[意表]] ([[의표]], uipyo)
 *[[意向]] ([[의향]], uihyang)
-{{bottom}}
 
+[[Category:Sino-Korean compounds]]
 
 ----
 
