/* Translations */ +Czech <saffron#2337628>

--- a/en/s/saffron.4771.wikitext
+++ b/en/s/saffron.4771.wikitext
@@ -50,6 +50,7 @@
 {{top}}
 *Bosnian: [[šafran#Bosnian|šafran]] {{m}}
 *Bulgarian: [[шафран]] {{m}}
+*Czech: [[šafrán]] {{m}}
 *Finnish: [[sahrami]]
 *French: [[safran]]
 *Italian: [[zafferano]] {{m}}
