--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -25,6 +25,7 @@ Abbreviation of Latin ''[[exempli gratiā]]'' ("for example"). ''Gratiā'' here 
 *Danish: [[f.eks.]], [[fx]] (''[[for eksempel]]'')
 *Dutch: [[bv.]], [[bijv.]], [[bvb.]] (''[[bijvoorbeeld]]'')
 *Finnish: [[esim.]] (''[[esimerkiksi]]'')
+*Faroese: [[t.d.]] (''[[til dømis]]'')
 *French: [[par ex.]], [[p. ex.]] (''[[par exemple]]'')<!-- are both right? -->
 *German: [[z. B.]] (''[[zum Beispiel]]'')
 *Greek: [[π.χ.]] (''[[παραδείγματος χάριν]]'')
