/* Etymology 1 */  proto +from <fight#2342535>

--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -10,7 +10,7 @@
 
 [[Image:Fight.gif|thumb|Fight ([[Karate]])]]
 ===Etymology 1===
-From {{OE.}} ''[[feohtan]]'' {{proto|West-Germanic|fextanan}}. Cognate with Dutch ''[[vechten]]'', German ''[[fechten]]''.
+From {{OE.}} ''[[feohtan]]'', from {{proto|West-Germanic|fextanan}}. Cognate with Dutch ''[[vechten]]'', German ''[[fechten]]''.
 
 ====Verb====
 {{en-verb|fights|fighting|fought|'''[[fought]]''' ''or (archaic)'' '''[[foughten]]'''}}
