--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -48,6 +48,7 @@ This spelling (for this meaning) is extremely rare, in comparison to the homopho
 *Arabic: {{ARchar|[[جاء]]}} (já:’a)
 *Bavarian: [[kemma]]
 *Chinese: (''simplified'') [[来]] / (''traditional'') [[來]] (lái)
+*Crimean Tatar: [[kelmek]]
 *Czech: [[přijít]]
 *Dutch: [[komen]]
 *Esperanto: [[veni#Esperanto|veni]]
