--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -1,19 +1,19 @@
 {{See|Butter}}
 [[Image:NCI butter.jpg|thumb|right|250 px|Butter (1) [[stick]] with a butter [[knife]].]]
 ==English==
+{{wikipedia}}
+===Etymology===
+Old English ''[[butere]]'' < a West Germanic borrowing of Latin ''[[butyrum]]'' < Greek '''{{polytonic|[[βούτυρον]]}}''' ''boutyron'' (perhaps literally ‘cow-cheese’, from '''{{polytonic|[[βούς]]}}''' ''bous'' ‘ox, cow’ + '''{{polytonic|[[τυρός]]}}''' ''tyros'' ‘cheese’).  The West Germanic source also gave Dutch ''[[boter]]'', German ''[[Butter]]''.
 
 ===Pronunciation===
-*(''UK''): {{IPA|/ˈbʌt.ə/}}, {{SAMPA|/"bVt.@/}}
+*(''UK''): {{IPA|/ˈbʌtə/}}, {{SAMPA|/"bVt.@/}}
 *(''US''): {{AHD|bŭtʹər}}, {{IPA|/ˈbʌɾ.ɚ/}}, {{SAMPA|/"bV4.@`/}}
 *:{{audio|en-us-butter.ogg|Audio (US)}}
 *:Rhymes: [[Rhymes:English:-ʌtə(r)|-ʌtə(r)]]
 
-===Etymology===
-From a W.Germanic source (cf. Ger. Butter, Du. boter) < Latin ''[[butyrum]]'' < Greek [[βούτυρον]] boutyron, perhaps lit. "cow-cheese," from [[βούς]] bous "ox, cow" + [[τυρός]] tyros "cheese;"
 
 ===Noun===
-{{wikipedia}}
-{{en-noun-reg-both|butter}}
+{{en-noun|-|pl2=butters}}
 
 # {{uncountable}} A soft, fatty foodstuff made by [[churn]]ing the [[cream]] of [[milk]] (generally cow's milk).
 # {{countable}} {{obsolete}} {{chemistry}} Any specific [[soft]] [[substance]]
