--- a/en/b/blonde.6881.wikitext
+++ b/en/b/blonde.6881.wikitext
@@ -56,12 +56,13 @@ flexed form of [[blond]]
 ===Adjective===
 '''blonde''' {{f}}
 # of [[light]] [[colour]], mostly said about light hair colour, but also possible about [[beer]]
-
+a.k.a dumbass
 ===Noun===
 '''blonde''' {{m}}/{{f}}
 # Person with blonde hair; blonde
 '''blonde''' {{f}}
 # {{context|Canadian French|slang|lang=fr}} [[girlfriend]]
+
 
 ----
 
