--- a/en/м/масленица.11176.wikitext
+++ b/en/м/масленица.11176.wikitext
@@ -1,7 +1,7 @@
 ==Russian==
-[[Category:Russian nouns]]
+
 ===Etymology===
-Derived from [[масло]] ('butter', 'oil'). Cf. French [[Mardi gras]].
+Derived from [[масло]] ('butter', 'oil'). Cf. French [[mardi gras]].
 
 ===Pronunciation===
 {| border=1 cellpadding=5
@@ -13,7 +13,7 @@ Derived from [[масло]] ('butter', 'oil'). Cf. French [[Mardi gras]].
 |}
 
 ===Noun===
-'''масленица''' ''f''
+'''масленица''' {{f}}
 
 # [[Shrovetide]], Pancake week (the week before Lent, seven weeks before Easter) 
 # [[feast]]
@@ -22,5 +22,7 @@ Derived from [[масло]] ('butter', 'oil'). Cf. French [[Mardi gras]].
 *не [[житьё]], а масленица — ''a [[bed of roses]]; living [[high on the hog]]''
 
 *не всё коту масленица, придёт и [[великий пост]] — ''good things don’t last forever (after dinner comes the reckoning)''
+
+[[Category:Russian nouns]]
 
 [[vi:масленица]]
