--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -25,7 +25,7 @@
 *Russian: [[блондин]] (blondín) {{m}}, [[блондинка]] (blondínka) {{f}}
 *[[Scottish Gaelic]]: [[bàn]], [[fionn]] (of both males and females), [[fear#Scottish Gaelic|fear]] bàn {{m}}, [[bean#Scottish Gaelic|bean]] bhàn {{f}}
 {{trans-mid}}
-*Spanish: [[rubio]] {{m}}, [[güero]] {{m}} (''Mexico''), [[canche]] {{m}} (''Guatemala''), [[chele]] {{m}} (''El Salvador, Honduras, Nicaragua''), [[macho]] {{m}} (''Costa Rica''), [[fulo]] {{m}} (''Panama''), [[mono]] {{m}} (''Colombia''), [[catire]] {{m}} (''Venezuela''), [[gringo]] {{m}} (''Peru''), [[rucio]] {{m}} (''Chile''). ''For female :'' [[rubia]], [[güera]], [[canche]] (''unchangeable''), [[chela]], [[macha]], [[fula]], [[mona]], [[catira]], [[gringa]], [[rucia]].
+*Spanish: [[rubio]] {{m}}, [[canche]] {{m}} ({{italbrac|Guatemala}}, [[catire]] {{m}} {{italbrac|Venezuela}}, [[chele]] {{m}} {{italbrac|El Salvador|Honduras|Nicaragua}},  [[fulo]] {{m}} {{italbrac|Panama}}, [[gringo]] {{m}} {{italbrac|Peru}}, [[güero]] {{m}} {{italbrac|Mexico}},  [[macho]] {{m}} {{italbrac|Costa Rica}},   [[mono]] {{m}} {{italbrac|Colombia}}, ), [[rucio]] {{m}} {{italbrac|Chile}}, [[suco]] {{m}} {{italbrac|Ecuador}}. For female : [[rubia]], [[canche]] {{italbrac|unchangeable}}, [[catira]], [[chela]], [[fula]], [[gringa]], [[güera]], [[macha]], [[mona]],  [[rucia]].
 *Swedish: [[blondin]]
 *Welsh: [[penfelyn]]
 {{trans-bottom}}
