--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -18,6 +18,7 @@
 : In the English language, it is only one of a few distinct words where the gender differentiation is actually reflected in the spelling of the word (i.e. ''She is a blonde woman.'' vs. ''He is a blond man.''), even though this is a relatively common occurrence in other languages. "Blond(e)" has only recently been borrowed from French into English to refer to light hair; [[traditional]] terms for light hair in English are "''fair(-haired)''", "''[[flaxen]]''", and "''[[towhead|tow headed]]''".
 
 ====Translations====
+{{rfc-level|Translations at L4+ not in L3 POS section}}
 {{trans-top|fair skinned/haired person}}
 *Hebrew: [[בלונדיני]] (blondyni) {{m}}, [[בלונדינית]] (blondynit) {{f}}
 *Irish: [[fionn]] (of both males and females), [[fear#Irish|fear]] fionn {{m}}, [[bean#Irish|bean]] fhionn {{f}}
