--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -139,6 +139,7 @@ Old English ''[[pleġian]]''
 {{trans-mid}}
 *Japanese: [[遊ぶ]] (asobu)
 *Old English: [[lacan|lācan]]
+*Pashto: [[لوبې کول]]، [[لوبېدل]]، [[غږول]] 
 *Polish: [[bawić]] (się)
 *Portuguese: [[jogar]]
 *Romanian: [[juca]]
