/* Related terms */ <beautiful#2358448>

--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -38,6 +38,7 @@ From {{F.}} ''[[beauté]]'', beauty, + Germanic ''[[-ful]]'', full of
 
 ====Related terms====
 *[[beauty]]
+*[[Katie...the one and only girl in my life..who I love more than anything. I cherish every moment I spend with her...she is the most beautiful woman in the world. I just wish she could see the life I could give her...I would give anything for her to see what I see when I look into her eyes.]]
 
 ====Translations====
 {{trans-top|possessing charm and attractive}}
