robot  Adding: [[pl:secretary]] <secretary#2358585>

--- a/en/s/secretary.7224.wikitext
+++ b/en/s/secretary.7224.wikitext
@@ -93,6 +93,7 @@ Medieval Latin ''[[secretarius]]'', one entrusted with [[secret]]s.
 [[io:secretary]]
 [[it:secretary]]
 [[hu:secretary]]
+[[pl:secretary]]
 [[ru:secretary]]
 [[simple:secretary]]
 [[fi:secretary]]
