--- a/en/早/早.16913.wikitext
+++ b/en/早/早.16913.wikitext
@@ -3,7 +3,7 @@
 ===Etymology===
 Pictograph of sun over the horizon 
 ===Han character===
-{{Han char|rn=72|rad=日|as=02|sn=6|four=6040<sub>0</sub>|canj=日十 (AJ)}}
+{{Han char|rn=72|rad=日|as=02|sn=6|four=6040<sub>0</sub>|canj=日十 (AJ)|ids=⿱[[日]][[十]]}}
 # early
 # soon
 # morning
