--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -57,7 +57,7 @@
 ===Verb===
 
 # To hit someone using a brick. 
-# To be a high state of anxiety: "Bricking it" 
+# (slang) To be a high state of anxiety: "Bricking it" 
 
 ====Translations====
 *'''Russian''': [[кирпичный]] (kirpichniy)
