--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -163,5 +163,6 @@ Old English ''{{Latinx|flǣsc}}'', ''[[flæsc]]''; cf. [[Old_High_German|Old Hig
 [[fi:flesh]]
 [[ta:flesh]]
 [[vi:flesh]]
+[[tr:flesh]]
 [[uk:flesh]]
 [[zh:flesh]]
