/* Translations */ +Czech <fight#2371525>

--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -209,6 +209,7 @@ From {{OE.}} ''[[feoht]]'', from the verb.  Corresponding to Dutch ''[[gevecht]]
 {{trans-bottom}}
 
 {{trans-top|will or ability to fight}}
+*Czech: [[bojovnost]] {{f}}
 *Dutch: [[vechtlust]] {{m}}
 *Hebrew: {{he-translation|רוח קרב|rú`akh kráv}} {{f}}
 {{trans-mid}}
