phrasal verbs <come#2374749>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -33,18 +33,35 @@ This spelling (for this meaning) is extremely rare, in comparison to the homopho
 ====Antonyms====
 *[[go]] (1)
 
-===Verb===
-{{en-verb|comes|[[coming]] ''or archaic'' [[come]]|[[came]]|[[come]]}}
+===Intransitive verb===
+{{en-verb|comes|[[coming]] ''or archaic'' [[come]]|came|come}}
 
 # To [[move]] from further [[away]] to [[near]]er to.
 #:''She'll be '''coming''' 'round the mountain when she '''comes'''...''
 # {{slang}} {{alternative spelling of|[[cum]]}}  To [[orgasm]].
 #:''When she started '''cumming''' for the third time, she screamed out that it was her first multiple orgasm.''
+# (''with the preposition'' [[at]]) To [[attack]].
+# (''with the preposition'' [[by]]) To [[get]] one's hands on.
 
-{{rfc-level|Translations at L3+}}
+====Derived terms====
+*[[come about]]
+*[[come across]]
+*[[come along]]
+*[[come around]]
+*[[come back]]
+*[[come clean]]
+*[[come down]]
+*[[come forward]]
+*[[come off]]
+*[[come on]]
+*[[come out]]
+*[[come short]]
+*[[come through]]
+*[[come true]]
+*[[come up]]
 
-===Translations===
-{{top}}
+====Translations====
+{{trans-top|To move from further away to nearer to}}
 *Arabic: {{ARchar|[[جاء]]}} (já:’a)
 *Bavarian: [[kemma]]
 *Chinese: (''simplified'') [[来]] / (''traditional'') [[來]] (lái)
@@ -60,13 +77,13 @@ This spelling (for this meaning) is extremely rare, in comparison to the homopho
 *Hebrew: [[לבוא]] (le-vó)
 *Hindi: [[आना]] (ānā)
 *Hungarian: [[jön]]
-*[[Ido]]: [[venar]]
+*Ido: [[venar]]
 *Indonesian: [[datang]], [[datang|mendatangi]], [[datang|mendatang]], [[datang|mendatangkan]]
 *Irish: [[tar#Irish|tar]]
 *Italian: [[venire]]
 *Japanese: [[来る]] (くる, kúru)
 *Korean: [[오다]] (oda)
-{{mid}}
+{{trans-mid}}
 *Kurdish: [[hatin]]
 *Latin: [[venire]]
 *Manchu: [[jimbi]]
@@ -87,10 +104,13 @@ This spelling (for this meaning) is extremely rare, in comparison to the homopho
 *Turkish: [[gelmek]]
 *Urdu: {{URchar|[[انا|آنا]]}} (ānā)
 *Yiddish: [[קומען]] (komen)
-{{bottom}}
+{{trans-bottom}}
+{{trans-top|To orgasm}}
+*Finnish: [[tulla]], [[saada]] [[orgasmi]]
+{{trans-mid}}
+{{trans-bottom}}
 
 ===See also===
-*[[come true]]
 *[[kingdom come]]
 
 [[Category:English verbs which are their own past participle]]
