--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -115,6 +115,7 @@ This spelling (for this meaning) is extremely rare, in comparison to the homopho
 
 [[Category:English verbs which are their own past participle]]
 [[Category:English irregular verbs]]
+[[Category:English past participles]]
 [[Category:English irregular past participles]]
 [[Category:English homophones]]
 [[Category:English prepositions]]
